--- a/QJY.WEB/Web.config
+++ b/QJY.WEB/Web.config
@@ -44,7 +44,7 @@
     </staticContent>
     <defaultDocument>
       <files>
-        <add value="login.html" />
+        <add value="index.html" />
       </files>
     </defaultDocument>
   </system.webServer>
